// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cancel should match snapshot 1`] = `
<Button
  active={false}
  block={false}
  bsClass="btn"
  bsStyle="default"
  disabled={false}
>
  Cancel button
</Button>
`;

exports[`Submit should match snapshot when disabled 1`] = `
<Button
  active={false}
  block={false}
  bsClass="btn"
  bsStyle="primary"
  disabled={true}
>
  Submit button
</Button>
`;

exports[`Submit should match snapshot when enabled 1`] = `
<Button
  active={false}
  block={false}
  bsClass="btn"
  bsStyle="primary"
  disabled={false}
>
  Submit button
</Button>
`;
